--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Design Thinking Certificate</title>
   </head>
   <body>
-    <img src="images/designthinkingiep.png" alt="Design Thinking Certificate - IEP" value="Designt Thinking Certificate - IEP" width="1000">
+    <img src="images/designthinkingiep.png" alt="Design Thinking Certificate - IEP" value="Designt Thinking Certificate - IEP" width="900" align="middle">
   </body>
 </html>
